unpackaged/main/default/objects/Ticket_booking__c/Ticket_booking__c.object-meta.xml
<CustomObject>
    <label>Ticket booking</label>
    <nameField>
        <label>Ticket booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticketbookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>