unpackaged/main/default/objects/Ticket_booking__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Community_Event__c</referenceTo>
    <relationshipLabel>Ticketbookings</relationshipLabel>
    <relationshipName>Ticketbookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>